added upload revised packing list
