# WMS.Api/Entities/IncomingProduct.cs
@@ -7,5 +7,6 @@ namespace WMS.Api.Entities
         public int IncomingId { get; set; }
         public Incoming? Incoming { get; set; }
         public bool Received { get; set; } = false;
+        public DateTime? DateAdded { get; set; } = null;
     }
 }
